# financial-agentic-prototype

./: .gitignore  README.md  __init__.py  docker-compose.yml  financial-package  install.sh  notebook_util.py  pyproject.toml
financial-package/: README.md  docker-compose.yml  run.sh
financial-package/financial-agents-service/: .env.example  DOCKER.md  Dockerfile  README.md  __init__.py  build.sh  create_package_structure.py  docker-compose.yml  docker-entrypoint.sh  financial_agents_api.postman_collection.json  install.sh  merged_agents.py  notebook_util.py  pyproject.toml  requirements.txt  run_notebook.py  start.sh  test-vector-db.py  vector_db_instruction_prompt.txt  vector_db_test.py
financial-package/financial-agents-service/core/: __init__.py  card.py  knowledge.py  orchestrator.py
financial-package/financial-agents-service/data/: __init__.py  financial_products.json
financial-package/financial-agents-service/notebooks/: financial_agents_merged.ipynb  merged_financial_agents.ipynb  merged_financial_agents_debug.ipynb
financial-package/financial-agents-service/scripts/: generate_synthetic_data.py  test_vector_db.py
financial-package/financial-agents-service/ui/: __init__.py  api.py  app.py
financial-package/financial-agents-service/vector_db/: README.md  chroma_setup.py  document_chunking.py  populate_vector_db.py  run_setup.py  vector_db_factory.py
financial-package/financial-card-service/: Dockerfile  README.md  card_api.postman_collection.json  docker-compose.yml  pom.xml
financial-package/financial-card-service/src/main/java/com/financialagent/cardapi/: CardApiApplication.java
financial-package/financial-card-service/src/main/java/com/financialagent/cardapi/controllers/: CardController.java
financial-package/financial-card-service/src/main/resources/: application.properties
financial-package/financial-card-service/src/main/resources/db/migration/: V1__Create_Card_Schema.sql  V2__Create_Card_Table.sql  V3__Seed_Card_Data.sql
financial-package/financial-ui-service/: Dockerfile  Dockerfile.backup  Dockerfile.new  README.md  docker-compose.yml
financial-package/financial-ui-service/api/: requirements.txt
financial-package/financial-ui-service/api/src/: api.py
financial-package/financial-ui-service/web/: .env.production  README.md  api-proxy.conf  index.html  new-entrypoint.sh  nginx.conf  package-lock.json  package.json  simple-test.html
financial-package/financial-ui-service/web/docker/: nginx.conf
financial-package/financial-ui-service/web/public/: api-debug.js  debug-api.js  test-api-chat.html
financial-package/financial-ui-service/web/src/: App.tsx  index.css
financial-package/financial-ui-service/web/src/components/: ChatAssistant.tsx  Navbar.tsx
financial-package/financial-ui-service/web/src/pages/: CardActivation.tsx  CardManagement.tsx  Dashboard.tsx
financial-package/financial-ui-service/web/src/services/: api.ts
financial-package/financial-ui-service/web/src/types/: axios.d.ts
financial-requirements/: CapStone project.rtf  CapStone_Project_Enhanced.md
financial-requirements/utils/: convert_to_notebooks.py  convert_with_jupytext.py
(+11 files in other folders)
