[tool.poetry]
name = "financial-agents"
version = "0.1.0"
description = "Financial AI agents built with LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
langgraph = ">=0.0.20"
openai = ">=1.0.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.1.0"

[tool.poetry.group.ui.dependencies]
streamlit = ">=1.24.0"
fastapi = ">=0.103.0"
uvicorn = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 